<resources>
    <string name="app_name">BirdMigration</string>
    <string name="object2_point">30 points</string>
    <string name="object1_point">10 points</string>
    <string name="bomb_point">Game Over</string>
    <string name="button_start">Start</string>

    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>

    <string name="game_over">Game Over</string>
    <string name="final_score">%d</string>
    <string name="high_score">Highest Score : %d</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_return_home"/>
</resources>